# rigol-ds1054z

./: README.md  debug.py  example__reference_signal_channel1.csv  example__reference_signal_channel1.py  example__rewrite.csv  example__rewrite.py  justfile  main.py  pyproject.toml
Rigol1000z/: __init__.py  rigol1000z.py
examples/full/: README.md  main.py
examples/ip/: README.md  example__pyvisa_connect_via_ip.py  example__reference_signal_channel1.csv  main.py  pyproject.toml
examples/usb/: README.md  example__pyvisa_connect_via_usb.py  example__reference_signal_channel1.csv  main.py  pyproject.toml
rigol_ds1054z/: __init__.py  rigol1000z.py
rigol_ds1054z/src/: oscope.py
