[project]
name = "rigol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pyvisa>=1.15.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
