[project]
name = "Rigol1000z"
version = "0.1.0"
description = "Python library for controlling Rigol DS1000Z series oscilloscopes via VISA (Virtual Instrument Software Architecture)."
readme = {file = "README.md", content-type = "text/markdown"}
maintainers = [
  {name = "Ian Cleary", email = "python@iancleary.me"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "pyvisa>=1.15.0",
]
[project.optional-dependencies]
openvisa = [
    "pyvisa-py>=0.8.1",
]
full = [
    "pyvisa-py>=0.8.1",
    "pyusb>=1.3.1",
    "libusb1>=3.3.1",
]
usb = [
    "pyusb>=1.3.1",
    "libusb1>=3.3.1",
]


[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
